feat: handle CORS
